# custom-operator

./: .gitignore  README.md  pyproject.toml
install/nsingla/crd/: automated-test-cr.yaml  custom-test-resource-def.yaml
test_controller/main/: constants.py  custom_operator.py
test_controller/main/actions/: BaseActions.py  base_actions.py  deploy_actions.py  pod_actions.py
test_controller/main/models/: custom_resource.py  event.py  metadata.py  secret.py  spec.py
test_controller/main/models/enums/: event_type.py  kind.py  resource.py  restart_policy.py
test_controller/main/pydantic/config/: model_config.py
test_controller/main/utils/: action_utils.py  api_clients.py
